--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Webpack is not that difficult</h1>
+    <h1>Webpack is not that difficult !!!</h1>
   </body>
 </html>
