--- a/src/template.html
+++ b/src/template.html
@@ -8,5 +8,11 @@
   </head>
   <body>
     <h1>Webpack is not that difficult !!!</h1>
+
+    <!-- <section class="banner">
+      <h2>Main title</h2>
+      <p>This is leading text</p>
+      <button>Learn Webpack Today</button>
+    </section> -->
   </body>
 </html>
