rm webp-plugin, use compresion of jpef and png

--- a/src/template.html
+++ b/src/template.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <h1>Webpack is not that difficult !!!</h1>
+    <img src="<%= require('./img/png-test.png') %>" alt="png test" />
+    <!-- nurodome dinamiska kelia iki paveikslio -->
 
     <!-- <section class="banner">
       <h2>Main title</h2>
