--- a/src/template.html
+++ b/src/template.html
@@ -9,6 +9,7 @@
   <body>
     <h1>Webpack is not that difficult !!!</h1>
     <img src="<%= require('./img/png-test.png') %>" alt="png test" />
+    <img src="<%= require('./img/joke_catch.gif') %>" alt="gif test" />
     <!-- nurodome dinamiska kelia iki paveikslio -->
 
     <!-- <section class="banner">
